# pvn-utils

./: .gitignore  .gitmodules  README.md  app_config.py  app_config.py.6de7edddd84c54b87c873f3c83bd81ec.py  cleanup.sh  config.sh  contend_config.py  contend_udf.py  coresident_config.py  expr_config.py  faktory_start.sh  inst_config.py  mix_config.py  nb_setup.sh  nf_config.py  no_start.sh  post_nb_setup.sh  profile_udf.py  pvn_app.py  pvn_p2p.py  requirements.txt  run.py  run.sh  run_app.py  run_app.sh  run_chain.py  run_contend.py  run_contend_udf.py  run_coresident.py  run_expr.py  run_inst.py  run_mix.py  run_p2p.py  run_p2p.sh  run_p2p_app.py  run_p2p_chain.py  run_p2p_coresident.py  run_p2p_inst.py  run_p2p_mix.py  (+8 more)
ToClean/: run_inst.py  run_mix.py  run_p2p_inst.py  task_coresident.py  task_p2p_coresident.py
additional_scripts/: etc-sudoers  exec_fragmentation.sh  kernel_upgrade.sh
bak/: expr_config.py  pvn_app.py  run_p2p_app.py
bt_srv/: Cargo.toml
contention_cpu/: Cargo.toml  start.sh
contention_cpu/src/: main.rs
contention_diskio/: Cargo.toml  contention_diskio.sh  contention_diskio_hdd.sh  contention_diskio_ssd.sh  start.sh
contention_mem/: Cargo.toml  start.sh  test
faktory_srv/: Cargo.toml  run_faktory_docker.sh  start_faktory.sh
hypothesis_test/: test.py
mm_expr/: record_all.py
netbricks_expr/: README.md  bak_run_netbricks.sh  config_1core.toml  config_1core_dumb.toml  config_1core_long.toml  config_1core_medium.toml  config_2core.toml  config_2core_long.toml  config_2core_long.toml.bak  config_6core.toml  run_netbricks.sh  run_netbricks_app.sh  run_netbricks_app_iptraf.sh  run_netbricks_inst.sh  run_pvnf_app.sh  run_pvnf_chain.sh  run_pvnf_contend.sh  run_pvnf_coresident.sh  run_pvnf_inst.sh  run_pvnf_mix.sh  run_pvnf_task.sh  run_pvnf_udf.sh  run_udf.sh  run_udf_contend.sh  run_udf_schedule.sh  test_app.sh  test_run.sh  udf_1core.toml  udf_1core_contention.toml  udf_1core_extend.toml  xcdr_cleanup.sh
p2p_expr/: README  README.md  ]  broke_p2p_config_leecher.sh  exec_fragmentation.sh  leecher_cleanup.sh  leecher_run.sh  leecher_setup.sh  leecher_test.sh  nb_cleanup.sh  nb_config.sh  (+31 more)
synthetic_srv/: Cargo.toml  Dockerfile  Dockerfile.alphine  Makefile  README.md  start_faktory.sh
synthetic_srv/examples/: test_produce.rs
synthetic_srv/remove/: reimpl_not_working_main.rs  workers_main.rs
synthetic_srv/scripts/: set-env.sh
synthetic_srv/src/: lib.rs  main.rs  transcode.rs  udf.rs
synthetic_srv/udf/: profile_map.json  rand1.json  rand4.json  sampled_df.csv  udf_workload_node1.json  udf_workload_node2.json
(+147 files in other folders)
