[package]
name = "bt_srv"
version = "0.1.0"
authors = ["Shuwen Jethro Sun <jethro.rules@real.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"

serde-xml-rs = "0.3.1"
serde_yaml = "0.8.11"
serde_json = "1.0.48"
serde = {version = "1.0.104", features= ["serde_derive"]}
tokio = {version=  "0.2.11", features=["full"]}
thiserror = "1.0.11"
http = "0.2.0"

# qbittorrent = {git = "https://github.com/vanillabrooks/qbittorrent", rev="b1a0902c39e22260c02d69f53324fd612f551912"}
qbittorrent = {git = "https://github.com/vanillabrooks/qbittorrent", rev="b1a0902c39e22260c02d69f53324fd612f551912"}
