[package]
name = "synthetic_srv"
version = "0.1.0"
authors = ["Shuwen sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faktory = "=0.11"
core_affinity = "=0.5.10"
crossbeam = "=0.7.3"
crossbeam-channel = "=0.4.4"
rand = "*"
