[package]
name = "synthetic_srv"
version = "0.1.0"
authors = ["Shuwen sun <jethrosun@ccs.neu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "=0.5.10"
rand = "*"
y4m = "=0.5"
time = "*"
resize = "=0.3"
failure = "=0.1.8"
serde_json = "=1.0.64"
